...
                    }
                Text("Kcals: \(obj.totalCals, specifier: "%.0f") F: \(obj.totalFat, specifier: "%.0f") C: \(obj.totalCarbs, specifier: "%.0f") P: \(obj.totalProtein, specifier: "%.0f")").font(.system(size: 16)).foregroundColor(.black)
            }
                        
    
                }
        }.accessibility(identifier: "foodListIdentifier")
       
    }
      
    }

   
...
