...
    }
    
    var body: some View {
        
            Form{
                Section{
                    TextField("Name: \(person.personUserInfo.firstName)" , text: $userName).accessibility(identifier: "personNameTextField")
                    Text("Caloric needs: \(person.personUserInfo.bmr, specifier: "%.0f") Kcal")
                }
                Section(header: Text("Activity Level:")){
                    HStack {
                        Text("Activity Level")
                        Button("") {
...
                        .foregroundColor(.black)
                }
     
                Section(header: Text("Personal Settings")){
                VStack{
                    TextField("Age: \(person.personUserInfo.age, specifier: "%.0f")", text: $ageInputString ).keyboardType(.numberPad)
                        .accessibility(identifier: "personAgeTextField")
                        .onReceive(Just(ageInputString)) { newValue in
                                        let filtered = newValue.filter { "0123456789".contains($0) }
                                        if filtered != newValue {
                                            self.ageInputString = filtered
                                        }
                        }
                }
                VStack{
                    TextField("Height: \(person.personUserInfo.height, specifier: "%.0f")cm", text: $heightInputString ).keyboardType(.numberPad)
                        .accessibility(identifier: "personHeightTextField")
                        .onReceive(Just(heightInputString)) { newValue in
                                        let filtered = newValue.filter { "0123456789".contains($0) }
                                        if filtered != newValue {
                                            self.heightInputString = filtered
                                        }
                }
  
                }
                VStack{
                    TextField("Weight: \(person.personUserInfo.weight, specifier: "%.0f")kg", text: $weightInputString ).keyboardType(.numberPad)
                        .accessibility(identifier: "personWeightTextField")
                        .onReceive(Just(weightInputString)) { newValue in
                                        let filtered = newValue.filter { "0123456789".contains($0) }
                                        if filtered != newValue {
                                            self.weightInputString = filtered
                                        }
                        }
...
                        Text("Toggle this on, to add the calories burnt throughout the day to your totalCalorieGoal for the day. It resets every day! ")
                            }
                            
                                
                        })
                        .foregroundColor(.black)
                        Toggle("Use Steps for Calories", isOn: $showingSteps).accessibility(identifier: "toggle")
                    }
         
                Button(action: {
                    
                    if(Double(weightInputString) == nil || Double(heightInputString) == nil || Double(ageInputString) == nil ){
                        
...
                }

                
                Section(header: Text("Macro Goals: \(person.personDailyCalorieGoals.calorieGoal, specifier: "%.0f") kcal")){
                        VStack{ //manual input (fat)
                            TextField("Fat Goal: \(person.personDailyCalorieGoals.fatGoal, specifier: "%.0f")g", text: $fatInputString ).keyboardType(.numberPad)
                                .accessibility(identifier: "fatGoalTextField")
                                .onReceive(Just(fatInputString)) { newValue in
                                                let filtered = newValue.filter { "0123456789".contains($0) }
                                                if filtered != newValue {
                                                    self.fatInputString = filtered
                                                }
                                }
                        }
                        VStack{ //manual input (carbs
                            TextField("Carb Goal: \(person.personDailyCalorieGoals.carbGoal, specifier: "%.0f")g", text: $carbInputString ).keyboardType(.numberPad)
                                .accessibility(identifier: "carbGoalTextField")

                                .onReceive(Just(carbInputString)) { newValue in
                                                let filtered = newValue.filter { "0123456789".contains($0) }
                                                if filtered != newValue {
                                                    self.carbInputString = filtered
                                                }
                        }
                        }
                        VStack{ //manual input (carbs

                            TextField("Protein Goal: \(person.personDailyCalorieGoals.proteinGoal, specifier: "%.0f")g", text: $proteinInputString ).keyboardType(.numberPad)
                                .accessibility(identifier: "proteinGoalTextField")
                                .onReceive(Just(proteinInputString)) { newValue in
                                                let filtered = newValue.filter { "0123456789".contains($0) }
                                                if filtered != newValue {
                                                    self.proteinInputString = filtered
                                                }
                                }
...
